fix(graphs): fix spacing of graphs on tablets

--- a/scss/includes/node-resource.scss
+++ b/scss/includes/node-resource.scss
@@ -31,7 +31,6 @@
 			margin-right: 5px;
 		}
 		.item.item-accordion {
-			max-height: 50em;
 			transition: 0.1s all linear;
 		}
 		.item.item-accordion.ng-hide {
