--- a/scss/opennms.scss
+++ b/scss/opennms.scss
@@ -107,7 +107,7 @@ body {
 }
 
 .spacer {
-	padding-bottom: 40px;
+	padding-bottom: 10px;
 }
 
 .no-padding {
